<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.insper.digitaltelegraph.MainActivity"
    android:orientation="vertical"
    android:background="@color/bodyBG">

    <ImageView android:id="@id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_full"
        android:layout_marginLeft="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@id/labelYourMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="16pt"
            android:layout_weight="0.7"
            android:text="@string/labelYourMessage"
            android:textColor="@color/labelYourMessage" />

        <Button android:id="@id/dictionary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/dictionary"/>

    </LinearLayout>
    <EditText android:id="@id/userMessageField"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:background="@color/userMessageFieldBG"/>

    <TextView android:id="@id/currentLetter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentLetter"
        android:textAlignment="center"
        android:textSize="14pt"
        android:textColor="@color/labelYourMessage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <Button android:id="@id/backspace"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:text="@string/backspace"/>

        <Button android:id="@id/contacts"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="0.5"
            android:text="@string/contacts"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <EditText android:id="@id/touchBlockerLeft"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.4"
            android:background="@color/userMessageFieldBG"/>

        <EditText android:id="@id/userInputField"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.2"
            android:focusable="false"
            android:textAlignment="center"
            android:textColor="@color/userInputFieldTextColor"
            android:background="@color/userMessageFieldBG"
            android:text="@string/userInputField"/>

        <EditText android:id="@id/touchBlockerRight"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.4"
            android:background="@color/userMessageFieldBG"/>
    </LinearLayout>

    <Button android:id="@id/sendMessage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/sendMessage"/>

</LinearLayout>
